--- a/package.json
+++ b/package.json
@@ -12,5 +12,16 @@
   "bugs": {
     "url": "https://github.com/Blockternship/dPanc/issues"
   },
-  "homepage": "https://github.com/Blockternship/dPanc#readme"
+  "homepage": "https://github.com/Blockternship/dPanc#readme",
+  "dependencies": {
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-scripts": "1.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
