--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "homepage": "https://github.com/Blockternship/dPanc#readme",
   "dependencies": {
+    "express": "^4.16.3",
+    "nodemon": "^1.18.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4"
@@ -22,6 +24,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+    "eject": "react-scripts eject",
+    "start:server": "nodemon backend/server.js",
+    "start:client": "yarn start",
+    "start:dev": "concurrently --kill-others-on-fail \"yarn start:server\" \"yarn start:client\""
+  },
+  "devDependencies": {
+    "concurrently": "^4.0.1"
+  },
+  "proxy": "http://localhost:3001/"
 }
