--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "homepage": "https://github.com/Blockternship/dPanc#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "mdbreact": "^4.7.0",
     "nodemon": "^1.18.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "web3": "^1.0.0-beta.36"
   },
   "scripts": {
     "start": "react-scripts start",
