--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   },
   "homepage": "https://github.com/Blockternship/dPanc#readme",
   "dependencies": {
+    "axios": "^0.18.0",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
-    "mdbreact": "^4.7.0",
-    "nodemon": "^1.18.3",
+    "multer": "^1.3.1",
+    "nodemon": "^1.18.4",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4",
+    "semantic-ui-css": "^2.3.3",
+    "semantic-ui-react": "^0.82.3",
     "web3": "^1.0.0-beta.36"
   },
   "scripts": {
