--- a/contracts/package.json
+++ b/contracts/package.json
@@ -15,6 +15,6 @@
   "license": "ISC",
   "dependencies": {
     "ganache-cli": "^6.1.8",
-    "truffle": "^4.1.14"
+    "truffle": "^5.0.0-beta.0"
   }
 }
