--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.18.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "highcharts": "^6.1.3",
     "multer": "^1.3.1",
     "nodemon": "^1.18.4",
     "pre-commit": "^1.2.2",
