--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "axios": "^0.18.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "highcharts": "^6.1.3",
     "multer": "^1.3.1",
     "nodemon": "^1.18.4",
     "pre-commit": "^1.2.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-highcharts": "^16.0.2",
     "react-scripts": "1.1.4",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.3",
