--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "ipfs-api": "^24.0.2",
     "multer": "^1.3.1",
     "nodemon": "^1.18.4",
+    "orbit-db": "^0.19.9",
     "pre-commit": "^1.2.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
