--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "ipfs-api": "^24.0.2",
+    "moment": "^2.22.2",
     "multer": "^1.3.1",
     "nodemon": "^1.18.4",
     "orbit-db": "^0.19.9",
@@ -31,7 +32,6 @@
     "react-scripts": "1.1.4",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.3",
-    "truffle": "^4.1.14",
     "web3": "^1.0.0-beta.36"
   },
   "scripts": {
