--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-scripts": "1.1.4",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.3",
-    "uport-connect": "^1.0.0-alpha-5",
+    "uport-connect": "^0.7.8",
     "web3": "^1.0.0-beta.36"
   },
   "scripts": {
